# django-listing

./: .gitignore  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  setup.py
django_listing/: __init__.py  apps.py  (+19 more)
showcase/: README.rst  pyproject.toml  requirements.txt
showcase/demo/: admin.py  data.py  db.sqlite3  listings.py  models.py  settings.py  urls.py  views.py  wsgi.py
showcase/demo/collected_static/demo/css/: demo.css  prism.css
showcase/demo/collected_static/django_listing/css/: django_listing-embedded.css  django_listing-ie7-codes.css  django_listing.css
showcase/demo/fixtures/: README  initial_data.json
showcase/demo/management/commands/: inject_listing_demo_data.py
showcase/demo/media/uploads/: company_twiyo.svg.renamed_for_testing_missing
showcase/demo/migrations/: 0001_initial.py
showcase/demo/templates/demo/: advanced_usage.html  aggregation.html  ajax.html  base.html  basic_usage.html  big_thumbnails.html  columns.html  columns1.html  columns2.html  columns3.html  columns4.html  columns5.html  company_detail.html  div_row.html  div_rows_listing.html  editable.html  editable1.html  editable2.html  editable3.html  editable4.html  employee_detail.html  filters.html  filters1.html  filters2.html  filters3.html  fonticons.html  group_by.html  index.html  insertable.html  insertable1.html  insertable2.html  many_ways.html  pagination.html  readme1.html  readme2.html  readme3.html  readme_first.html  selectable.html  selectable1.html  selectable2.html  (+12 more)
showcase/demo/templatetags/: demo_extras.py
showcase/scripts/: make_statics.sh
(+162 files in other folders)
